fix: productcard details spacing

--- a/styles/components/ProductCard.module.scss
+++ b/styles/components/ProductCard.module.scss
@@ -10,18 +10,27 @@ Products Grid
   display: flex;
   flex-direction: column;
   gap: 5px;
-  // justify-content: center;
+  justify-content: space-between;
   align-items: center;
-}
-
-.productCard__name {
-  // position: relative;
-  top: 0;
 }
 .productCard__img {
 }
 .productCard__img > div > img {
   margin: 0 auto;
+}
+
+.productCard__details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.productCard__name {
+  // position: relative;
+  top: 0;
+  text-align: center;
+  margin-bottom: 5px;
 }
 
 .productCard__summary {
